test/example90.ts
type Never = never;
var nev: Never; // error